nvim-java-test-discovery: VSCode 侧同病同源确认(2098258 实锤/09:49 复现闭环)+ 收尾执行(exclusions 绝对路径匹配→工作区级设置;主仓外科修 pom、pull 跳过、2204 worktree 清理)